--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -942,6 +942,10 @@ button.dark:active:enabled {
 	text-align: center;
 }
 
+.align-right {
+	text-align: right;
+}
+
 .italic {
 	font-style: italic;
 }
@@ -952,10 +956,6 @@ between lines
 */
 .line {
     display: inline-block;
-}
-
-.right {
-	text-align: right;
 }
 
 .no-scroll {
@@ -1012,15 +1012,6 @@ between lines
 	display: block;
 	margin-bottom: 0.5rem;
 	width: 100%;
-}
-
-.inline-split.left {
-	padding-right: 1rem;
-}
-
-.inline-split.right {
-	padding-left: 1rem;
-	text-align: left;
 }
 
 .inline-split .material-icons-round,
@@ -1427,7 +1418,6 @@ between lines
 	width: 4rem;
 	right: 0;
 	padding: 1rem;
-	text-align: right;
 }
 
 #close, #caption {
