Add inline-ternate class

--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -986,7 +986,8 @@ between lines
 }
 
 .inline-single,
-.inline-split {
+.inline-split,
+.inline-ternate {
 	box-sizing: border-box;
 	display: inline-block;
 	padding: 0 1rem 1rem 1rem;
@@ -1019,15 +1020,16 @@ between lines
 	vertical-align: bottom;
 }
 
+.inline-ternate {
+    width: 33.333333%
+}
+
 @media(max-width: 600px) {
-	.inline-split {
+	.inline-split,
+    .inline-ternate {
 		display: block;
 		width: 100%;
 	}
-
-    .inline-split {
-        padding-bottom: 1rem;
-    }
 }
 
 /*---------------------------------------
