--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -105,6 +105,11 @@ nav>ul, nav>ul>li, nav>ul>li>a, article>a {
 }
 
 article {
+    width: 100%;
+	margin: 0 auto;
+}
+
+article.narrow {
 	max-width: 30rem;
 	margin: 0 auto;
 }
@@ -546,6 +551,17 @@ img {
 
 img.round {
 	border-radius: 50%;
+}
+
+.betta_image {
+    background: yellow;
+}
+
+.betta_image>div {
+
+}
+
+.betta_image>div img {
 }
 /*-------------------------------------*/
 
