--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -105,13 +105,13 @@ nav>ul, nav>ul>li, nav>ul>li>a, article>a {
 }
 
 article {
-    width: 100%;
+    max-width: 30rem;
 	margin: 0 auto;
 }
 
-article.narrow {
-	max-width: 30rem;
-	margin: 0 auto;
+article.full {
+    width: 100%;
+    max-width: 100%;
 }
 
 ul {
@@ -314,6 +314,31 @@ details {
 	border-bottom: 0.7rem solid $color-secondary;
 }
 
+/*-------------------------------------*/
+
+/*---------------------------------------
+	header
+---------------------------------------*/
+header {
+    width: 100%;
+    margin: 0 auto;
+}
+
+header.hero {
+    text-align: center;
+}
+
+header.hero img {
+    width: 100%;
+    padding: 0 1rem;
+}
+
+header.hero>h1 {
+    font-size: 7rem;
+    padding-bottom: 6rem;
+    font-style: italic;
+    letter-spacing: 0.35rem;
+}
 /*-------------------------------------*/
 
 /*---------------------------------------
@@ -554,7 +579,6 @@ img.round {
 }
 
 .betta_image {
-    background: yellow;
 }
 
 .betta_image>div {
@@ -675,8 +699,14 @@ body>nav ul li a:active {
     text-align: left;
 }
 
+@media (min-width: 800px) {
+    .sidebar {
+        width: 5rem;
+    }
+}
+
 .sidebar + main {
-	margin-left: 17rem;
+	margin-left: auto;
 }
 /*-------------------*/
 
