--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -652,6 +652,14 @@ header.hero > h1 {
   text-shadow: -2px -2px 2px rgba(0, 0, 0, 0.2);
 }
 
+@media (max-width: 800px) {
+  header.hero > h1 {
+    font-size: 4rem;
+    letter-spacing: 0.15rem;
+    line-height: 5rem;
+    padding-bottom: 3rem;
+  }
+}
 /*-------------------------------------*/
 /*---------------------------------------
 	Loader
@@ -1447,15 +1455,14 @@ between lines
   display: block;
   padding: 1rem;
   margin-top: 2rem;
-  border-radius: 0.25rem;
   border-color: #212121;
   transition: 0.2s;
-  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2);
+  border: 2px solid #eeeeee;
 }
 
 @media (hover: hover) {
   .feed > article > a:hover {
-    background: #f5f5f5;
+    border-color: #212121;
   }
 }
 .feed > article > a:active {
