--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -341,6 +341,15 @@ header.hero>h1 {
     text-transform: uppercase;
     text-shadow: -2px -2px 2px rgba(0,0,0,0.2);
 }
+
+@media (max-width:800px) {
+    header.hero>h1 {
+        font-size: 4rem;
+        letter-spacing: 0.15rem;
+        line-height: 5rem;
+        padding-bottom: 3rem;
+    }
+}
 /*-------------------------------------*/
 
 /*---------------------------------------
@@ -1160,16 +1169,18 @@ between lines
 	display: block;
 	padding: 1rem;
 	margin-top: 2rem;
-	border-radius: 0.25rem;
+	//border-radius: 0.25rem;
 	border-color: $color-main;
 	transition: 0.2s;
-	box-shadow: $shadow-level-1;
+	//box-shadow: $shadow-level-1;
+    border: 2px solid $color-active;
 }
 
 @media(hover: hover) {
 	.feed>article>a:hover
 	{
-		background: $color-accent;
+		//background: $color-accent;
+        border-color: $color-main;
 	}
 }
 
