--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -324,6 +324,7 @@ details {
 header {
     width: 100%;
     margin: 0 auto;
+    padding-top: 3rem;
 }
 
 header.hero {
@@ -654,31 +655,45 @@ form input[type="file"] {
 	Main Navigation Menu
 	Back Button
 ---------------------------------------*/
-body>nav {
-	position: fixed;
-	top: 0;
-	width: 100%;
+#betta_menu {
+	position: absolute;
+    left: 0;
+    right: 0;
 	text-align: center;
 	transition: 0.3s;
 	overflow: show;
 	z-index: 10;
 	background: $color-background;
-	box-shadow: $shadow-level-2;
 }
 
-body>nav ul {
+.menu-spacer {
+    display: block;
+    padding-top: 2.5rem;
+}
+
+/*-------------------*/
+/* Stick Menu        */
+/*-------------------*/
+#betta_menu.stick {
+	position: fixed;
+    top: 0;
+	box-shadow: $shadow-level-2;
+}
+/*-------------------*/
+
+#betta_menu ul {
 	padding: 0;
 	margin: 0;
   	text-align: center;
 }
 
-body>nav ul li {
+#betta_menu ul li {
   	display: inline-block;
   	margin: 0.25rem;
 	list-style: none;
 }
 
-body>nav ul li a {
+#betta_menu ul li a {
 	display: inline-block;
 	border-radius: 2rem;
 	vertical-align: middle;
@@ -686,31 +701,33 @@ body>nav ul li a {
 	font-weight: 700;
 }
 
-body>nav ul li a .material-icons-round,
-body>nav ul li a .text {
+#betta_menu ul li a .material-icons-round,
+#betta_menu ul li a .text {
 	display: block;
 	height: 1.5rem;
 	padding: 0.5rem;
 	line-height: 1.5rem;
 }
 
-body>nav ul li a .text {
+#betta_menu ul li a .text {
 	padding: 0.25rem 0.75rem;
 }
 
-body>nav ul li a.active {
+#betta_menu ul li a.active {
   	background: $color-secondary;
 }
 
-body>nav ul li button {
+#betta_menu ul li button {
 	z-index: 99;
 }
 
-body>nav ul li a:active {
+#betta_menu ul li a:active {
 	background: $color-active;
 	transition: 0.1s;
 }
 
+/*-------------------*/
+/* Sidebar Menu      */
 /*-------------------*/
 .sidebar {
     bottom: 0;
@@ -735,7 +752,7 @@ body>nav ul li a:active {
 }
 /*-------------------*/
 
-#menu-button {
+#betta_menu-button {
     display: none;
 	position: fixed;
 	right: 1rem;
@@ -757,16 +774,16 @@ body>nav ul li a:active {
 	z-index: 10;
 }
 
-#menu-button:active,
+#betta_menu-button:active,
 #back-button:active {
 	box-shadow: $shadow-level-0;
 }
 
 @media (hover: hover) {
-	body>nav ul li a:hover {
+	#betta_menu ul li a:hover {
 		background: $color-accent;
 	}
-	body>nav ul li a.active:hover {
+	#betta_menu ul li a.active:hover {
 		background: $color-secondary;
   	}
 }
@@ -783,12 +800,12 @@ body>nav ul li a:active {
 		margin-left: auto;
 	}
 
-    body>nav>ul {
+    #betta_menu>ul {
 		position: absolute;
         bottom: 5rem;
 	}
 
-	body>nav,
+	#betta_menu,
 	.sidebar {
 		display: none;
 		padding: 5rem 3rem;
@@ -799,29 +816,29 @@ body>nav ul li a:active {
 		overflow-y: scroll;
 	}
 
-	body>nav.show,
+	#betta_menu.show,
 	.sidebar.show {
 		display: block;
 	}
 
-	body>nav>ul>li {
+	#betta_menu>ul>li {
 		display: block;
 		text-align: left;
 		margin-bottom: 0.75rem;
 	}
 
-	body>nav>ul>li>a {
+	#betta_menu>ul>li>a {
 		font-size: 1.25rem;
 		line-height: 1.75rem;
 		letter-spacing: 0.05rem;
 	}
   
-	#menu-button {
+	#betta_menu-button {
 		display: block;
 	}
 
     /* Display menu as toolbar */
-    body>nav.toolbar {
+    #betta_menu.toolbar {
         display: block;
         top: auto;
 		padding: 0.25rem 0 0.5rem 0;
@@ -829,18 +846,18 @@ body>nav ul li a:active {
         overflow: hidden;
     }
 
-    body>nav.toolbar>ul {
+    #betta_menu.toolbar>ul {
 		position: static;
 	}
 
-    body>nav.toolbar>ul>li {
+    #betta_menu.toolbar>ul>li {
 		display: inline-block;
 		text-align: left;
 		margin-bottom: 0rem;
 	}
 }
 
-body>nav ul li a:active {
+#betta_menu ul li a:active {
 	background: $color-active;
 	transition: 0.1s;
 }
