--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1286,6 +1286,82 @@ a.card h4 {
 /*-------------------------------------*/
 
 /*---------------------------------------
+	Link Card Double
+---------------------------------------*/
+a.card-double {
+	display: block;
+	padding: 0;
+	margin-top: 1rem;
+	border-color: $color-secondary;
+	transition: 0.2s;
+    border-radius: 0.25rem;
+    box-shadow: $shadow-level-2;
+    overflow: hidden;
+}
+
+a.card-double .betta_image,
+a.card-double .content {
+    display: inline-block;
+    vertical-align: top;
+    width: 50%;
+}
+
+a.card-double .betta_image img {
+    margin-bottom: -3px;
+    border-radius: 0;
+}
+
+a.card-double .content {
+    max-height: 100%;
+    padding: 4rem 3rem 0 3rem;
+}
+
+@media(hover: hover) {
+	a.card-double:hover
+	{
+        background: $color-accent;
+        cursor: pointer;
+	}
+}
+
+a.card-double:active
+{
+	background: $color-active;
+    box-shadow: $shadow-level-0;
+}
+
+a.card p {
+    margin-top: 0.5rem;
+    padding: 0 2rem 2rem 2rem;
+}
+
+a.card-double h2,
+a.card-double h3,
+a.card-double h4 {
+    text-align: center;
+    margin-top: 1.5rem;
+    padding: 0 0 1rem 0;
+    border-bottom: 2px solid #e0e0e0;
+}
+
+a.card-double:hover h2,
+a.card-double:hover h3,
+a.card-double:hover h4 {
+    border-bottom: 2px solid #212121;
+    transition: 0.1s;
+}
+
+a.card-double h2,
+a.card-double h3,
+a.card-double h4 {
+	font-size: 1.6rem;
+	line-height: 2.15rem;
+	letter-spacing: 0.05rem;
+	margin-top: 2.15rem;
+}
+/*-------------------------------------*/
+
+/*---------------------------------------
 	Contact Card
 ---------------------------------------*/
 .card.contact {
