--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -175,7 +175,8 @@ h2>a,
 h3>a,
 h4>a,
 h5>a,
-h6>a {
+h6>a,
+li>a {
 	border-bottom-style: solid;
 	border-bottom-width: 2px;
 	border-color: $color-secondary;
@@ -196,7 +197,8 @@ h2>a:hover,
 h3>a:hover,
 h4>a:hover,
 h5>a:hover,
-h6>a:hover {
+h6>a:hover,
+li>a:hover {
 	border-color: $color-main;
 }
 
