Add fixed size to double link card

--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -606,6 +606,7 @@ img.round {
 }
 
 .betta_image {
+    background: $color-accent;
 }
 
 .betta_image>div {
@@ -1292,6 +1293,8 @@ a.card h4 {
 ---------------------------------------*/
 a.card-double {
 	display: block;
+    width: 55rem;
+    height: 27.5rem;
 	padding: 0;
 	margin-top: 1rem;
 	border-color: $color-secondary;
@@ -1303,12 +1306,15 @@ a.card-double {
 
 a.card-double .betta_image,
 a.card-double .content {
+    height: 100%;
+    width: 50%;
     display: inline-block;
     vertical-align: top;
-    width: 50%;
 }
 
 a.card-double .betta_image img {
+    height: 27.5rem;
+    width: 27.5rem;
     margin-bottom: -3px;
     border-radius: 0;
 }
