--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -910,6 +910,10 @@ img.round {
   border-radius: 50%;
 }
 
+.betta_image {
+  background: #f5f5f5;
+}
+
 /*-------------------------------------*/
 /*---------------------------------------
 	Forms
@@ -1568,6 +1572,8 @@ a.card h4 {
 ---------------------------------------*/
 a.card-double {
   display: block;
+  width: 55rem;
+  height: 27.5rem;
   padding: 0;
   margin-top: 1rem;
   border-color: #e0e0e0;
@@ -1579,12 +1585,15 @@ a.card-double {
 
 a.card-double .betta_image,
 a.card-double .content {
+  height: 100%;
+  width: 50%;
   display: inline-block;
   vertical-align: top;
-  width: 50%;
 }
 
 a.card-double .betta_image img {
+  height: 27.5rem;
+  width: 27.5rem;
   margin-bottom: -3px;
   border-radius: 0;
 }
