Fix size for link cards

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1527,7 +1527,14 @@ a.card {
   box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
 }
 
+a.card .betta_image {
+  height: 17rem;
+  width: 25.5rem;
+}
+
 a.card .betta_image img {
+  height: 100%;
+  width: 100%;
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
   border-bottom-left-radius: 0;
