--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -645,7 +645,7 @@ header.hero {
 
 header.hero img {
   width: 100%;
-  padding: 0 1rem;
+  padding: 0 2rem;
 }
 
 header.hero > h1 {
@@ -910,8 +910,29 @@ img.round {
   border-radius: 50%;
 }
 
-.betta_image {
-  background: #f5f5f5;
+.betta_image > div {
+  position: relative;
+}
+
+.betta_image > div img {
+  margin-bottom: -3px;
+  border-radius: 0;
+}
+
+.betta_image .name {
+  position: absolute;
+  left: 0;
+  bottom: -1rem;
+  -webkit-transform: rotate(-90deg);
+  -webkit-transform-origin: right bottom;
+  -moz-transform: rotate(-90deg);
+  -moz-transform-origin: right bottom;
+  -ms-transform: rotate(-90deg);
+  -ms-transform-origin: right bottom;
+  -o-transform: rotate(-90deg);
+  -o-transform-origin: right bottom;
+  transform: rotate(-90deg);
+  transform-origin: left bottom;
 }
 
 /*-------------------------------------*/
@@ -1530,6 +1551,7 @@ a.card {
 a.card .betta_image {
   height: 17rem;
   width: 25.5rem;
+  background: #f5f5f5;
 }
 
 a.card .betta_image img {
@@ -1596,6 +1618,10 @@ a.card-double .content {
   width: 50%;
   display: inline-block;
   vertical-align: top;
+}
+
+a.card-double .betta_image {
+  background: #f5f5f5;
 }
 
 a.card-double .betta_image img {
