--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1298,10 +1298,10 @@ a.card.cover .content {
 
 a.card.cover .content h2 {
     width: auto;
-    margin: 6.5rem 4rem 0 4rem;
-    padding: 1rem;
+    margin: 12rem 0rem 0 0rem;
+    padding: 0.5rem 1rem;
     text-align: center;
-    background:rgba(255, 255, 255, 0.75);
+    background: $color-background;
     transition: 0.1s;
 }
 
