--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1683,13 +1683,13 @@ a.card-double h4 {
   text-align: center;
   margin-top: 1.5rem;
   padding: 0 0 1rem 0;
-  border-bottom: 2px solid #e0e0e0;
+  border-bottom: 3px solid #e0e0e0;
 }
 
 a.card-double:hover h2,
 a.card-double:hover h3,
 a.card-double:hover h4 {
-  border-bottom: 2px solid #212121;
+  border-bottom: 3px solid #212121;
   transition: 0.1s;
 }
 
@@ -1709,24 +1709,25 @@ a.card-double h4 {
 .card.contact {
   display: inline-block;
   vertical-align: top;
-  height: 20rem;
-  width: 15rem;
-  margin: 1.5rem;
-  padding: 1rem;
-  border-radius: 0.25rem;
-  background: #ffffff;
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
+  height: 30rem;
+  width: 25rem;
+  margin: 1.25rem 0.75rem 0 0.75rem;
 }
 
 .card.contact .picture {
-  width: 13rem;
-  height: 13rem;
+  width: 25rem;
+  height: 25rem;
   background: #f5f5f5;
   overflow: hidden;
 }
 
 .card.contact p {
-  margin-top: 0.5rem;
+  position: relative;
+  width: 15rem;
+  padding: 0.5rem;
+  margin: -2rem auto 0 auto;
+  background: #f5f5f5;
+  z-index: 2;
 }
 
 /*-------------------------------------*/
