--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -175,8 +175,7 @@ h2>a,
 h3>a,
 h4>a,
 h5>a,
-h6>a,
-li>a {
+h6>a {
 	border-bottom-style: solid;
 	border-bottom-width: 2px;
 	border-color: $color-secondary;
@@ -197,8 +196,7 @@ h2>a:hover,
 h3>a:hover,
 h4>a:hover,
 h5>a:hover,
-h6>a:hover,
-li>a:hover {
+h6>a:hover {
 	border-color: $color-main;
 }
 
@@ -616,6 +614,10 @@ img.round {
 .betta_image>div img {
     margin-bottom: -3px;
     border-radius: 0;
+}
+
+.betta_image>div img.round {
+	border-radius: 50%;
 }
 
 .betta_image .name {
