--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -2155,5 +2155,17 @@ p.version {
 }
 
 /*-------------------------------------*/
+/*---------------------------------------
+	Google Maps
+---------------------------------------*/
+.google-maps {
+  width: 100%;
+  height: 15rem;
+  border: 0;
+  border-radius: 0.25rem;
+  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
+}
+
+/*-------------------------------------*/
 
 /*# sourceMappingURL=betta-0.0.4.css.map */
