--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1886,3 +1886,15 @@ p.version {
 	display: block;
 }
 /*-------------------------------------*/
+
+/*---------------------------------------
+	Google Maps
+---------------------------------------*/
+.google-maps {
+    width: 100%;
+    height: 15rem;
+    border: 0;
+    border-radius: 0.25rem;
+    box-shadow: $shadow-level-2;
+}
+/*-------------------------------------*/
