Add ability to add styling to list links

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -488,7 +488,8 @@ h2 > a,
 h3 > a,
 h4 > a,
 h5 > a,
-h6 > a {
+h6 > a,
+li.link > a {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-color: #e0e0e0;
@@ -509,7 +510,8 @@ h2 > a:hover,
 h3 > a:hover,
 h4 > a:hover,
 h5 > a:hover,
-h6 > a:hover {
+h6 > a:hover,
+li.link:hover > a {
   border-color: #212121;
 }
 
