--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1476,6 +1476,20 @@ a.card-double h4 {
     background: #f5f5f5;
     z-index: 2;
 }
+
+.card.contact .email {
+    position: absolute;
+    top: 0.75rem;
+    right: -1.25rem;
+    border-bottom: none;
+}
+
+.card.contact .phone {
+    position: absolute;
+    top: 0.75rem;
+    left: -1.25rem;
+    border-bottom: none;
+}
 /*-------------------------------------*/
 
 /*---------------------------------------
