--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1591,26 +1591,43 @@ a.card.cover .betta_image {
 
 a.card.cover .content {
   position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  border-radius: 0.25rem;
+  top: 1rem;
+  left: 1rem;
+  bottom: 1rem;
+  right: 1rem;
+  border: 2px solid #ffffff;
+  transition: 0.1s;
 }
 
-a.card.cover .content h2 {
+a.card.cover .content h3 {
   width: auto;
-  margin: 12rem 0rem 0 0rem;
+  margin: 12rem 3rem 0 3rem;
   padding: 0.5rem 1rem;
   text-align: center;
   background: #ffffff;
   transition: 0.1s;
 }
 
+a.card.cover h2,
+a.card.cover h3,
+a.card.cover h4 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  letter-spacing: 0.05rem;
+  margin-top: 1.75rem;
+}
+
 @media (hover: hover) {
   a.card:hover {
     background: #f5f5f5;
     cursor: pointer;
+  }
+
+  a.card.cover:hover .content {
+    top: 1.5rem;
+    left: 1.5rem;
+    bottom: 1.5rem;
+    right: 1.5rem;
   }
 }
 a.card:active {
