Remove click pointer on slideshow

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -952,7 +952,7 @@ img.round {
 }
 
 .betta_image.slideshow .selectors span:hover {
-  cursor: pointer;
+  cursor: default;
 }
 
 /*-------------------------------------*/
