--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -652,7 +652,7 @@ img.round {
 }
 
 .betta_image.slideshow .selectors span:hover{
-    cursor: pointer;
+    cursor: default;
 }
 /*-------------------------------------*/
 
