--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1367,8 +1367,9 @@ a.card.cover .content {
 }
 
 a.card.cover .content h3 {
+    display: inline-block;
     width: auto;
-    margin: 12rem 3rem 0 3rem;
+    margin: 12rem auto 0 auto;
     padding: 0.5rem 1rem;
     text-align: center;
     background: $color-background;
