Update footer styling

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -578,10 +578,7 @@ h6 {
 }
 
 hr {
-  border: none;
-  border-style: solid;
-  border-width: 1px;
-  color: #e0e0e0;
+  border: 2px solid #e0e0e0;
 }
 
 /*
@@ -1233,8 +1230,11 @@ form input[type=file] {
 	Footer
 ---------------------------------------*/
 footer {
-  padding: 5rem 0 0 0;
   text-align: center;
+}
+
+footer p {
+  margin: 0;
 }
 
 /*-------------------------------------*/
