--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1543,7 +1543,7 @@ a.card-double:active
     width: 16rem;
     padding: 0.5rem;
     margin: -2rem auto 0 auto;
-    background: #f5f5f5;
+    background: $color-accent;
     z-index: 2;
 }
 
