--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -940,6 +940,34 @@ img.round {
 
 /*-------------------------------------*/
 /*---------------------------------------
+	Image Strip
+---------------------------------------*/
+.betta_image-strip {
+  height: 20rem;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  white-space: nowrap;
+  scrollbar-width: 0;
+}
+
+.betta_image-strip #back {
+  left: calc(50vw - (55rem / 2) - 4rem);
+  margin-top: 8rem;
+}
+
+.betta_image-strip #forward {
+  right: calc(50vw - (55rem / 2) - 4rem);
+  margin-top: 8rem;
+}
+
+.betta_image-strip .betta_image {
+  display: inline-block;
+  width: calc(50% - 2rem);
+  margin: 1rem;
+}
+
+/*-------------------------------------*/
+/*---------------------------------------
 	Slideshow
 ---------------------------------------*/
 #crossfade {
