--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1629,37 +1629,26 @@ a.card-double:active
 /*-------------------------------------*/
 
 /*---------------------------------------
-	Card
-
-    Not ready to be used.
----------------------------------------
-.card {
+	Plant Card
+---------------------------------------*/
+.card.plant {
 	display: inline-block;
 	vertical-align: top;
-	height: 20rem;
-	width: 15rem;
+	height: 20rem !important;
+	width: 15rem !important;
 	margin: 1rem;
 }
 
-.card>.front,
-.card>.back {
+.card.plant>.front,
+.card.plant>.back {
 	position: relative;
 	height: 100%;
 	width: 100%;
 	border-radius: 0.25rem;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-	background: rgba(255,255,255,1);
 	overflow: hidden;
 }
 
-.card>.front>img {
-	height: 100%;
-	width: auto;
-	max-width: none;
-	border-radius: 0.25rem;
-}
-
-.card>.back>.profile {
+.card.plant>.back>.profile {
 	height: 11rem;
 	width: 100%;
 	border-top-left-radius: 1rem;
@@ -1668,7 +1657,7 @@ a.card-double:active
 	border-bottom-right-radius: 0;
 }
 
-.card>.back>.profile>img {
+.card.plant>.back>.profile>img {
 	position: absolute;
 	height: 9rem;
 	width: 9rem;
@@ -1677,8 +1666,8 @@ a.card-double:active
 	border-radius: 50%;
 }
 
-.card>.back>.profile>.icon-left,
-.card>.back>.profile>.icon-right {
+.card.plant>.back>.profile>.icon-left,
+.card.plant>.back>.profile>.icon-right {
 	position: absolute;
 	height: 3rem;
 	width: 3rem;
@@ -1686,15 +1675,15 @@ a.card-double:active
 	border-radius: 50%;
 }
 
-.card>.back>.profile>.icon-left {
+.card.plant>.back>.profile>.icon-left {
 	left: 0.5rem; 
 }
 
-.card>.back>.profile>.icon-right {
+.card.plant>.back>.profile>.icon-right {
 	right: 0.5rem; 
 }
-.card>.back>.profile>.icon-left>.material-icons-round,
-.card>.back>.profile>.icon-right>.material-icons-round {
+.card.plant>.back>.profile>.icon-left>.icon,
+.card.plant>.back>.profile>.icon-right>.icon {
 	width: 100%;
 	font-size: 2rem;
 	line-height: 3rem;
@@ -1702,7 +1691,7 @@ a.card-double:active
 	text-align: center;
 }
 
-.card>.back>.description {
+.card.plant>.back>.description {
 	height: 9rem;
 	width: 100%;
 	padding: 1rem;
@@ -1712,52 +1701,52 @@ a.card-double:active
 	border-bottom-right-radius: 1rem;
 }
 
-.card>.back>.description>h5 {
+.card.plant>.back>.description>h5 {
 	height: 1.5rem;
 	margin: 0;
 }
 .card>.back>.description>h6 {
 	margin: 0;
 }
-.card>.back>.description>p {
+.card.plant>.back>.description>p {
 	margin: 0;
 }
 
-.card>.back>.description>.properties {
+.card.plant>.back>.description>.properties {
 	width: 100%;
 }
 
-.card>.back>.description>.properties>.p-1,
-.card>.back>.description>.properties>.p-2,
-.card>.back>.description>.properties>.p-3{
+.card.plant>.back>.description>.properties>.p-1,
+.card.plant>.back>.description>.properties>.p-2,
+.card.plant>.back>.description>.properties>.p-3{
 	width: 100%;
 	height: 1rem;
 	margin-top: 0.5rem;
 	border-radius: 0.5rem;
 }
 
-.card>.back>.description>.properties>.p-1>div ,
-.card>.back>.description>.properties>.p-2>div ,
-.card>.back>.description>.properties>.p-3>div {
+.card.plant>.back>.description>.properties>.p-1>div ,
+.card.plant>.back>.description>.properties>.p-2>div ,
+.card.plant>.back>.description>.properties>.p-3>div {
 	height: 100%;
 	border-radius: 0.5rem;
 }
 
-.card>.back>.description>.properties>.p-1>div:not(:first-child) {
+.card.plant>.back>.description>.properties>.p-1>div:not(:first-child) {
 	display: inline-block;
 	width: calc(20% - 0.75rem);
 	margin: 0 0.25rem;
 	background: #eeeeee;
 }
 
-.card>.back>.description>.properties>.p-2>div:not(:first-child) {
+.card.plant>.back>.description>.properties>.p-2>div:not(:first-child) {
 	display: inline-block;
 	width: calc(20% - 0.75rem);
 	margin: 0 0.25rem;
 	background: #eeeeee;
 }
 
-.card>.back>.description>.properties .icon {
+.card.plant>.back>.description>.properties div.icon {
 	display: inline-block;
 	height: 1rem;
 	width: 1.25rem;
@@ -1765,7 +1754,7 @@ a.card-double:active
 	padding: 0;
 	vertical-align: top;
 }
-.card>.back>.description>.properties .icon>.material-icons-round {
+.card.plant>.back>.description>.properties div.icon>.icon {
 	font-size: 1.25rem;
 	line-height: 1.25rem;
 	height: 1rem;
@@ -1774,7 +1763,7 @@ a.card-double:active
 	padding: 0;
 	vertical-align: top;
 }
-.card>.back>.description>.properties>.p-3>div:not(:first-child) {
+.card.plant>.back>.description>.properties>.p-3>div:not(:first-child) {
 	display: inline-block;
 	width: calc(12.5% - 0.65625rem);
 	margin: 0 0.25rem;
@@ -1806,7 +1795,7 @@ a.card-double:active
 }.temperature-10 {
 	background: orange !important;
 }
--------------------------------------*/
+/*-------------------------------------*/
 
 /*---------------------------------------
 	Flip Card
