--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -682,16 +682,19 @@ img.round {
 }
 
 
-.betta_image.slideshow .selectors span{
+.betta_image.slideshow .selectors span {
+    position: relative;
+    display: inline-block;
     font-size: 1.5rem;
+    z-index: 5;
 }
 
-.betta_image.slideshow .selectors:hover{
+.betta_image.slideshow .selectors:hover {
     cursor: default;
 }
 
-.betta_image.slideshow .selectors span:hover{
-    cursor: default;
+.betta_image.slideshow .selectors span:hover {
+    cursor: pointer;
 }
 /*-------------------------------------*/
 
