Fix image strip buttons appearing on top of menu

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -953,11 +953,13 @@ img.round {
 .betta_image-strip #back {
   left: calc(50vw - (55rem / 2) - 4rem);
   margin-top: 8rem;
+  z-index: 5;
 }
 
 .betta_image-strip #forward {
   right: calc(50vw - (55rem / 2) - 4rem);
   margin-top: 8rem;
+  z-index: 5;
 }
 
 .betta_image-strip .betta_image {
