--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1375,9 +1375,9 @@ a.card {
 	margin-top: 1rem;
 	margin: 1rem;
 	border-color: $color-secondary;
-	transition: 0.2s;
     border-radius: 0.25rem;
     box-shadow: $shadow-level-2;
+	transition: 0.2s;
 }
 
 a.card .betta_image {
@@ -1393,6 +1393,7 @@ a.card .betta_image img {
     border-top-right-radius: 0.25rem;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+	transition: 0.2s;
 }
 
 /* Cover card */
@@ -1408,7 +1409,7 @@ a.card.cover .content {
     bottom: 1rem;
     right: 1rem;
     border: 2px solid $color-background;
-    transition: 0.1s;
+    transition: 0.2s;
 }
 
 a.card.cover .content h3 {
@@ -1418,7 +1419,7 @@ a.card.cover .content h3 {
     padding: 0.5rem 1rem;
     text-align: center;
     background: $color-background;
-    transition: 0.1s;
+    transition: 0.2s;
 }
 
 a.card.cover h2,
@@ -1450,6 +1451,10 @@ a.card.cover h4 {
     a.card.cover:hover h3,
     a.card.cover:hover h4 {
         border: none;
+    }
+
+    a.card:hover .betta_image img {
+        opacity: 0.9;
     }
 }
 
@@ -1490,6 +1495,7 @@ a.card-double h4 {
 	line-height: 2.15rem;
 	letter-spacing: 0.05rem;
     text-align: center;
+    transition: 0.2s;
 }
 
 a.card:hover h2,
@@ -1499,7 +1505,6 @@ a.card-double:hover h2,
 a.card-double:hover h3,
 a.card-double:hover h4 {
     border-bottom: 3px solid #212121;
-    transition: 0.1s;
 }
 /*-------------------------------------*/
 
@@ -1513,10 +1518,10 @@ a.card-double {
 	padding: 0;
 	margin-top: 1rem;
 	border-color: $color-secondary;
-	transition: 0.2s;
     border-radius: 0.25rem;
     box-shadow: $shadow-level-2;
     overflow: hidden;
+    transition: 0.2s;
 }
 
 a.card-double .betta_image,
@@ -1536,6 +1541,7 @@ a.card-double .betta_image img {
     width: 27.5rem;
     margin-bottom: -3px;
     border-radius: 0;
+    transition: 0.2s;
 }
 
 a.card-double .content {
@@ -1549,6 +1555,10 @@ a.card-double .content {
         background: $color-accent;
         cursor: pointer;
 	}
+
+    a.card-double:hover .betta_image img {
+        opacity: 0.9;
+    }
 }
 
 a.card-double:active
